testdata/family.dd.txt
.load testdata/family.dl
----
Error: unknown statement type: LoadStmt
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:54:13)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)
    at Transform.EventEmitter.emit (domain.js:441:20)

father{child: X, father: Y}.
----
Error: no such relation: father
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

father{child: "Pete", father: F}.
----
Error: no such relation: father
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

parent{child: X, parent: Y}.
----
Error: no such relation: parent
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

parent{child: "Pete", parent: Y}.
----
Error: no such relation: parent
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

grandfather{grandchild: "Pete", grandfather: A}.
----
Error: no such relation: grandfather
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

grandparent{grandchild: "Pete", grandparent: X}.
----
Error: no such relation: grandparent
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

grandparent{grandchild: X, grandparent: Y}.
----
Error: no such relation: grandparent
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

sibling{left: X, right: Y}.
----
Error: no such relation: sibling
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

cousin{left: X, right: Y}.
----
Error: no such relation: cousin
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

aunt{child: C, aunt: X}.
----
Error: no such relation: aunt
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

uncle{child: C, uncle: X}.
----
Error: no such relation: uncle
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

ancestor{desc: "Pete", an: Z}.
----
Error: no such relation: ancestor
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

ancestor{desc: X, an: "Peter"}.
----
Error: no such relation: ancestor
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

ancestor{desc: X, an: Y}.
----
Error: no such relation: ancestor
    at Object.doQuery (/Users/vilterp/code/datalog-ts/incremental/eval.ts:267:11)
    at Object.processStmt (/Users/vilterp/code/datalog-ts/incremental/interpreter.ts:37:22)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:90:36)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)

.graphviz
----
Error: 
-- PARSING FAILED --------------------------------------------------

> 1 | .graphviz
    | ^

Expected one of the following: 

'.load', '.table', '.trace', /#[^\n]*/, record identifier

    at Parsimmon._.tryParse (/Users/vilterp/code/datalog-ts/node_modules/parsimmon/src/parsimmon.js:845:15)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:89:39)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)
    at Transform.EventEmitter.emit (domain.js:441:20)

> 1 | .graphviz
    | ^
Expected one of the following: 
'.load', '.table', '.trace', /#[^\n]*/, record identifier
    at Parsimmon._.tryParse (/Users/vilterp/code/datalog-ts/node_modules/parsimmon/src/parsimmon.js:845:15)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:89:39)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)
    at Transform.EventEmitter.emit (domain.js:441:20)
.trace cousin{left: L, right: R}.
----
Error: 
-- PARSING FAILED --------------------------------------------------

> 1 | > 1 | .graphviz    | ^Expected one of the following: '.load', '.table', '.trace', /#[^\n]*/, record identifier    at Parsimmon._.tryParse (/Users/vilterp/code/datalog-ts/node_modules/parsimmon/src/parsimmon.js:845:15)    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:89:39)    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)    at Interface.emit (events.js:182:13)    at Interface.EventEmitter.emit (domain.js:441:20)    at Interface._onLine (readline.js:290:10)    at Interface._normalWrite (readline.js:433:12)    at Transform.ondata (readline.js:149:10)    at Transform.emit (events.js:182:13)    at Transform.EventEmitter.emit (domain.js:441:20).trace cousin{left: L, right: R}.
    | ^

Expected one of the following: 

'.load', '.table', '.trace', /#[^\n]*/, record identifier

    at Parsimmon._.tryParse (/Users/vilterp/code/datalog-ts/node_modules/parsimmon/src/parsimmon.js:845:15)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:89:39)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)
    at Transform.EventEmitter.emit (domain.js:441:20)

.ruleGraph
----
Error: 
-- PARSING FAILED --------------------------------------------------

> 1 | .ruleGraph
    | ^

Expected one of the following: 

'.load', '.table', '.trace', /#[^\n]*/, record identifier

    at Parsimmon._.tryParse (/Users/vilterp/code/datalog-ts/node_modules/parsimmon/src/parsimmon.js:845:15)
    at Repl.handleLine (/Users/vilterp/code/datalog-ts/repl.ts:89:39)
    at Interface.<anonymous> (/Users/vilterp/code/datalog-ts/repl.ts:49:12)
    at Interface.emit (events.js:182:13)
    at Interface.EventEmitter.emit (domain.js:441:20)
    at Interface._onLine (readline.js:290:10)
    at Interface._normalWrite (readline.js:433:12)
    at Transform.ondata (readline.js:149:10)
    at Transform.emit (events.js:182:13)
    at Transform.EventEmitter.emit (domain.js:441:20)
